<resources>
    <string name="app_name">TestingApp</string>
    <string name="next">NEXT</string>
    <string name="main_activity_title">Main Activity Title</string>



</resources>